force-app/main/default/objects/LoyaltyTransaction__c/LoyaltyTransaction__c.object-meta.xml
<CustomObject>
    <label>Loyalty Transaction</label>
    <pluralLabel>Loyalty Transactions</pluralLabel>
    <nameField>
        <displayFormat>LT-{000000}</displayFormat>
        <label>Txn Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>