force-app/main/default/objects/LoyaltyTransaction__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Purchase</fullName><default>true</default><label>Purchase</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Redemption</fullName><default>false</default><label>Redemption</label></value>
            <value><fullName>Adjustment</fullName><default>false</default><label>Adjustment</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>